wrap brainatlas in div wrapper

--- a/src/app/main/main.html
+++ b/src/app/main/main.html
@@ -1,5 +1,7 @@
 <div class="container">
 
-    <brainatlas></brainatlas>
+    <div class="widget-wrapper">
+        <brainatlas imageUrls="imageUrls"></brainatlas>
+    </div>
 
 </div>
