--- a/src/app/components/brainatlas/brainatlas.less
+++ b/src/app/components/brainatlas/brainatlas.less
@@ -1,9 +1,26 @@
 .brainatlas-wrapper {
-    width: 300px;
-    height: 300px;
-    & > div {
+    width: 500px;
+    height: 500px;
+    & > div:first-child {
         border: 1px solid black;
         width: 100%;
         height: 100%;
     }
+    img {
+        pointer-events: none;
+        user-select: none;
+    }
+    .brainatlas-thumbnail-container {
+        height: 80px;
+        padding: 5px;
+        overflow-x: scroll;
+        overflow-y: hidden;
+        position: relative;
+    }
+
+    .bbb {
+        width: 2000px;
+        position: absolute;
+    }
+
 }
