fix name of imageUrls in html
Angular converts imageUrls to image-urls in html.

--- a/src/app/main/main.html
+++ b/src/app/main/main.html
@@ -1,7 +1,7 @@
 <div class="container">
 
     <div class="widget-wrapper">
-        <brainatlas imageUrls="imageUrls"></brainatlas>
+        <brainatlas image-urls="imageUrls"></brainatlas>>
     </div>
 
 </div>
