--- a/src/app/components/brainatlas/brainatlas.html
+++ b/src/app/components/brainatlas/brainatlas.html
@@ -2,9 +2,9 @@
     <panzoom config="panzoomConfig" model="panzoomModel">
         <img src="http://placehold.it/500x500">
     </panzoom>
-    <div class="brainatlas-thumbnail-container">
-        <div ng-repeat="url in imageUrls">
+    <ul class="brainatlas-thumbnail-container">
+        <li ng-repeat="url in imageUrls">
             <img src="{{url}}" />
-        </div>
-    </div>
+        </li>
+    </ul>
 </div>
