--- a/src/app/components/brainatlas/brainatlas.less
+++ b/src/app/components/brainatlas/brainatlas.less
@@ -1,20 +1,42 @@
 .brainatlas-wrapper {
+    padding: 10px;
     width: 500px;
     height: 500px;
 
     & > div:first-child {
-        border: 1px solid black;
         width: 100%;
         height: 100%;
     }
 
-    img {
+    .display-img {
         pointer-events: none;
         user-select: none;
     }
+}
 
-    .brainatlas-thumbnail-container {
-        height: 80px;
-        padding: 5px;
+.brainatlas-thumbnail-container {
+    height: 100px;
+    width: 500px;
+    min-width: 100%;
+    overflow-x: auto;
+    overflow-y: hidden;
+    padding: 10px 0;
+    list-style-type: none;
+    display: block;
+
+    li {
+        margin-left: 5px;
+
+        &.active {
+            outline: none;
+            border: 1px solid #7bc1f7;
+            box-shadow: 0px 0px 8px #7bc1f7;
+        }
+
+        .brainatlas-thumbnail {
+            width: 80px;
+            height: 80px;
+            border-radius: 2px;
+        }
     }
 }
