add function setImage, call it with index 0 at start

--- a/src/app/components/brainatlas/brainatlas.html
+++ b/src/app/components/brainatlas/brainatlas.html
@@ -4,7 +4,7 @@
     </panzoom>
 
     <ul class="brainatlas-thumbnail-container list-inline text-nowrap">
-        <li ng-repeat="url in imageUrls">
+        <li ng-repeat="(index, url) in imageUrls track by $index" ng-click="setImage(index)">
             <img class="brainatlas-thumbnail" ng-src="{{url}}" />
         </li>
     </ul>
