--- a/src/app/components/brainatlas/brainatlas.less
+++ b/src/app/components/brainatlas/brainatlas.less
@@ -1,28 +1,46 @@
 .brainatlas-wrapper {
+    width: 100%;
+    height: 100%;
     padding: 10px;
-    width: 500px;
-    height: 500px;
+    user-select: none;
 
-    & > div:first-child {
+    // Panzoom wrapper.
+    .pan-zoom-frame {
         width: 100%;
         height: 100%;
     }
 
     .display-img {
         pointer-events: none;
-        user-select: none;
     }
 }
 
-.brainatlas-thumbnail-container {
+.brainatlas-outer-wrapper {
+    position: relative;
+
+    .glyphicon {
+        position: absolute;
+        top: 50%;
+        margin-top: -7px;
+        height: 14px;
+    }
+
+    .glyphicon-chevron-left {
+        left: 0;
+    }
+
+    .glyphicon-chevron-right {
+        right: 0;
+    }
+}
+
+.brainatlas-thumbnail-wrapper {
+    margin: 0 5%;
+    padding: 10px 0;
+    width: 90%;
     height: 100px;
-    width: 500px;
-    min-width: 100%;
     overflow-x: auto;
     overflow-y: hidden;
-    padding: 10px 0;
-    list-style-type: none;
-    display: block;
 
     li {
         margin-left: 5px;
@@ -32,11 +50,11 @@
             border: 1px solid #7bc1f7;
             box-shadow: 0px 0px 8px #7bc1f7;
         }
+    }
 
-        .brainatlas-thumbnail {
-            width: 80px;
-            height: 80px;
-            border-radius: 2px;
-        }
+    .brainatlas-thumbnail {
+        width: 80px;
+        height: 80px;
+        border-radius: 2px;
     }
 }
