--- a/src/app/components/brainatlas/brainatlas.less
+++ b/src/app/components/brainatlas/brainatlas.less
@@ -15,6 +15,11 @@
     }
 }
 
+.brainatlas-no-results {
+    text-align: center;
+    line-height: 476px; // assuming height = 500px
+}
+
 .brainatlas-outer-wrapper {
     position: relative;
 
