--- a/src/app/components/brainatlas/brainatlas.less
+++ b/src/app/components/brainatlas/brainatlas.less
@@ -1,3 +1,9 @@
+.brainatlas-controls {
+    margin: 10px 0;
+    width: 100%;
+    height: 20px;
+}
+
 .brainatlas-wrapper {
     width: 100%;
     height: 100%;
